# RayTracingProject

./: CMakeLists.txt  FastPrinting.h  README.md  Tracing.h  TracingClases.h  main.cpp
headers/: STLheaders.h  Tracing.cpp  Tracing.h
src/: STLheaders.h  Tracing.h  TracingClases.h  main.cpp
